--- a/ai-hermeneutics-kit.html
+++ b/ai-hermeneutics-kit.html
@@ -19,8 +19,8 @@
       <h1>AI Hermeneutics Kit</h1>
       <h2>How to use this</h2>
       <ul>
-        <li>Start with the Methods page to learn practical techniques for reading AI texts.</li>
         <li>Use the Theory pages to understand the philosophical foundations.</li>
+        <li>Read through the Methods page to learn practical techniques for reading AI texts.</li>
         <li>Apply the Strategies and Case Studies for hands-on interpretation practice.</li>
         <li>Every page links to open sources for deeper exploration.</li>
       </ul>
