--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <h1><a href="index.html">My AI Notebook</a></h1>
+  <h1><a href="index.html">Professor Plate's Notebook</a></h1>
   <nav class="top-links">
     <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
       romantic quick kit
