--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My AI Notebook</title>
+    <title>Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <script src="template.js"></script>
 </head>
 <body>
     <header data-template="header">
-    <h1><a href="index.html">My AI Notebook</a></h1>
+    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
 </header>
     <main>
         <section class="quickkit-card">
         <p><a href="romantic-quick-kit.html">Romantic Quick Kit</a> — things that might be helpful (terms, method, contexts, links).</p>
         </section>
 
-        <!-- <section class="quickkit-card">
-        <p><a href="ai-hermeneutics-kit.html">AI Hermeneutics Kit</a> — methods and theory for interpreting AI-generated texts.</p>
-        </section> -->
+        <section class="quickkit-card">
+        <p><a href="ai-hermeneutics-kit.html">AI Hermeneutics Kit</a> — theorizing a hermeneutics for AI.</p>
+        </section>
 
 
         <nav>
