--- a/post55.html
+++ b/post55.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post 55 - My AI Notebook</title>
+  <title>Post 55 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
@@ -11,14 +11,14 @@
 </head>
 <body>
   <header data-template="header">
-    <h1><a href="index.html">My AI Notebook</a></h1>
+    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
   </header>
   <main>
     <article>
       <h2>55 More Than Bullshit: A Romantic Reading of the Textual Unconscious</h2>
       <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
       <p>A common and powerful critique labels LLMs as "bullshit machines." Drawing on philosopher Harry Frankfurt, this argument states that AI is not lying (which requires knowing the truth) but is profoundly indifferent to truth. Its output is fluent mimicry without belief. From a Romantic perspective, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>.</p>
-      <p>But Romantic hermeneutics offers a more productive path. It allows us to move past the author's (or model's) state of mind and instead focus on the **surplus meaning** within the text itself. The question isn't whether the AI believes what it says, but what unconscious patterns and cultural logics are revealed in its speech.</p>
+      <p>But Romantic hermeneutics offers a more productive path. It allows us to move past the author's (or model's) state of mind and instead focus on the <em>surplus meaning</em> within the text itself. The question isn't whether the AI believes what it says, but what unconscious patterns and cultural logics are revealed in its speech.</p>
 
       <h3>Schlegel's Reframe: The Work That "Aims at More Than It Knows"</h3>
       <p>The Romantic theorist Friedrich Schlegel provided the key: "Every excellent work... aims at more than it knows." This isn't a mystical claim. It's a recognition that a text is a crystallization of cultural forces, linguistic structures, and psychological patterns that no author—human or machine—can fully control or comprehend. A text always says more than it means to say.</p>
@@ -28,7 +28,7 @@
       <p>To read for this surplus is a specific application of our <a href="romantic-kit-hermeneutics.html">hermeneutic method</a>. Consider an AI prompted to write a corporate statement about "innovation." It might produce a text that combines the language of digital disruption with metaphors of farming and natural growth ("planting the seeds of synergy," "harvesting disruptive ideas").</p>
       <ul>
           <li>The "bullshit" reading dismisses this as meaningless cliché.</li>
-          <li>The **Romantic hermeneutic reading** sees a rich cultural artifact. The unintentional fusion of technological and agrarian language reveals a deep-seated American myth: the Jeffersonian ideal of the yeoman farmer being unconsciously mapped onto the Silicon Valley entrepreneur. The AI doesn't "believe" this, but its text reveals a powerful cultural logic.</li>
+          <li>The <em>Romantic hermeneutic reading</em> sees a rich cultural artifact. The unintentional fusion of technological and agrarian language reveals a deep-seated American myth: the Jeffersonian ideal of the yeoman farmer being unconsciously mapped onto the Silicon Valley entrepreneur. The AI doesn't "believe" this, but its text reveals a powerful cultural logic.</li>
       </ul>
       <p>This is not bullshit. It is data. The task of the interpreter is to make that latent cultural structure visible.</p>
 
