--- a/post57.html
+++ b/post57.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post 57 - My AI Notebook</title>
+  <title>Post 57 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header data-template="header">
-    <h1><a href="index.html">My AI Notebook</a></h1>
+    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
   </header>
   <main>
     <article>
@@ -19,11 +19,11 @@
       <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
 
       <p>Analysis of AI-generated text often defaults to a systematic view: we talk about the model's architecture, the biases in its training data, the statistical probabilities of its word choices. This is necessary work. But if it's all we do, we commit a fundamental interpretive error. We are trying to understand a text by looking at only one half of the evidence.</p>
-      <p><a href="romantic-kit-hermeneutics.html">Romantic hermeneutics</a>, as laid out by Schleiermacher, insists that true understanding requires a **double vision**. It demands that we operate on two rails at once: the grammatical/systematic and the psychological/singular.</p>
+      <p><a href="romantic-kit-hermeneutics.html">Romantic hermeneutics</a>, as laid out by Schleiermacher, insists that true understanding requires a <em>double vision</em>. It demands that we operate on two rails at once: the grammatical/systematic and the psychological/singular.</p>
       
       <h3>The Lure of the System</h3>
-      <p>In AI discourse, the **grammatical rail**—the analysis of the system—is dominant. We can produce neat visualizations, map the dataset, and call it "understanding." But this approach, on its own, is a form of reductionism. It treats the text as a mere symptom of the system that produced it.</p>
-      <p>Romantic method insists that we must also engage the **psychological rail**: the analysis of the work as a singular artifact, a unique constellation of choices that could have been otherwise. This means asking *how* this specific output, with its unique metaphors and stylistic tics, was composed.</p>
+      <p>In AI discourse, the <em>grammatical rail</em>—the analysis of the system—is dominant. We can produce neat visualizations, map the dataset, and call it "understanding." But this approach, on its own, is a form of reductionism. It treats the text as a mere symptom of the system that produced it.</p>
+      <p>Romantic method insists that we must also engage the <em>psychological rail</em>: the analysis of the work as a singular artifact, a unique constellation of choices that could have been otherwise. This means asking *how* this specific output, with its unique metaphors and stylistic tics, was composed.</p>
 
       <h3>What's Lost When One Rail Disappears</h3>
       <p>When we ignore the psychological rail, interpretation collapses into something else entirely. We lose three crucial capacities:</p>
