--- a/post58.html
+++ b/post58.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post 58 - My AI Notebook</title>
+  <title>Post 58 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header data-template="header">
-    <h1><a href="index.html">My AI Notebook</a></h1>
+    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
   </header>
   <main>
     <article>
@@ -19,7 +19,7 @@
       <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
 
       <p>One of Schleiermacher’s most audacious claims is that the goal of interpretation is to understand an author "better than he understood himself." To a computationalist, this sounds like nonsense. If meaning is a product of a generative process, the best one could ever do is perfectly replicate that process. How could an interpreter possibly surpass the source?</p>
-      <p>This question reveals the fundamental difference between two models of understanding. The computational model sees understanding as **replication**. The Romantic hermeneutic model sees it as **illumination**. This is why interpretation remains an irreducible human art.</p>
+      <p>This question reveals the fundamental difference between two models of understanding. The computational model sees understanding as <em>replication</em>. The Romantic hermeneutic model sees it as <em>illumination</em>. This is why interpretation remains an irreducible human art.</p>
 
       <h3>The Computational Goal: To Replicate the Process</h3>
       <p>In much of the discourse around AI, the ultimate form of "understanding" a model is to successfully reverse-engineer it. If we can map its weights and trace its pathways to know *how* it produced an output, we consider the job done. Meaning is reduced to its generative mechanics. This is a powerful but limited view.</p>
