--- a/romantic-kit-hermeneutics.html
+++ b/romantic-kit-hermeneutics.html
@@ -32,13 +32,13 @@
     </ul>
 
     <h3>2. Turn the Hermeneutic Circle</h3>
-    <p>You can only understand the whole of a text through its parts, but you can only understand the parts in the context of the whole. This is the famous **hermeneutic circle**. Far from being a trap, it's a "necessary and productive process."</p>
+    <p>You can only understand the whole of a text through its parts, but you can only understand the parts in the context of the whole. This is the famous <em>hermeneutic circle</em>. Far from being a trap, it's a "necessary and productive process."</p>
     <ul>
       <li><strong>How it works:</strong> Start with a preliminary sense of the whole (a hypothesis). Use that to interpret a specific part (a word, a scene). Let that detailed analysis of the part refine or even shatter your initial hypothesis about the whole. Repeat. Understanding is the gradual, spiraling motion of this circle.</li>
     </ul>
 
     <h3>3. Make a Disciplined “Divinatory” Leap</h3>
-    <p>At some point, analysis isn't enough. You must make an imaginative, hypothesis-driven leap. Schleiermacher called this the **"divinatory" method** (from the French <em>deviner</em>, to guess). It’s an intuitive guess about the organizing intention or creative act that could have produced this specific text. This isn't mysticism; it's a disciplined hypothesis that must be constantly tested against the textual evidence gathered from the two rails and the hermeneutic circle.</p>
+    <p>At some point, analysis isn't enough. You must make an imaginative, hypothesis-driven leap. Schleiermacher called this the <em>"divinatory" method</em> (from the French <em>deviner</em>, to guess). It's an intuitive guess about the organizing intention or creative act that could have produced this specific text. This isn't mysticism; it's a disciplined hypothesis that must be constantly tested against the textual evidence gathered from the two rails and the hermeneutic circle.</p>
 
     <h3>4. Listen for the Surplus Meaning</h3>
     <p>Finally, listen for what exceeds the author’s (or system's) apparent intent. The critic Friedrich Schlegel argued that great works often "aim at more than [they] know," carrying "unconscious meanings." Look for productive contradictions, unintended ironies, and patterns that reveal the hidden assumptions of a historical moment or a training dataset. This surplus is where the most vital interpretation often begins.</p>
@@ -46,9 +46,9 @@
     <h2>Why This Matters for AI</h2>
     <p>This method allows us to analyze AI-generated text without getting stuck in dead-end debates about "souls" or "sincerity." We don't need to know if the machine "feels." We can produce a rigorous reading by:</p>
     <ul>
-        <li>Mapping the AI's **grammatical** system (its model, prompts, and source data).</li>
-        <li>Tracing its **psychological** signature (its recurring stylistic tics, biases, and compositional habits).</li>
-        <li>Using the **hermeneutic circle** to build a coherent model of its output, listening for the **surplus meanings** that reveal the logic of the system itself.</li>
+        <li>Mapping the AI's <em>grammatical</em> system (its model, prompts, and source data).</li>
+        <li>Tracing its <em>psychological</em> signature (its recurring stylistic tics, biases, and compositional habits).</li>
+        <li>Using the <em>hermeneutic circle</em> to build a coherent model of its output, listening for the <em>surplus meanings</em> that reveal the logic of the system itself.</li>
     </ul>
 
     <h3>Go Deeper (Open Sources)</h3>
