--- a/romantic-kit-organic-form.html
+++ b/romantic-kit-organic-form.html
@@ -17,7 +17,7 @@
       <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>The Organic vs. The Mechanical (A Theory of Form)</h1>
-    <p>The Romantics proposed a radical alternative to the Enlightenment's view of the universe as a clockwork machine. They saw nature, art, and even society not as mechanical assemblies of parts, but as **living organisms**: dynamic, developing wholes where the form grows from an inner, vital principle.</p>
+    <p>The Romantics proposed a radical alternative to the Enlightenment's view of the universe as a clockwork machine. They saw nature, art, and even society not as mechanical assemblies of parts, but as <em>living organisms</em>: dynamic, developing wholes where the form grows from an inner, vital principle.</p>
     <p>This creates a powerful analytical lens for interpretation: is the structure of this work <strong>organic</strong> or <strong>mechanical</strong>?</p>
 
     <h2>How to Read for Form</h2>
@@ -38,8 +38,8 @@
     <h2>The Organic/Mechanical Lens and AI</h2>
     <p>This binary is an exceptionally sharp tool for analyzing AI outputs.</p>
     <ul>
-      <li>When an LLM produces a generic, template-driven sonnet that merely fills in the blanks of a form, we can describe its structure as **mechanical**.</li>
-      <li>When a text (human or AI-generated) develops in a surprising yet inevitable-seeming way, with its structure and language feeling uniquely suited to its subject, we can argue that it achieves **organic form**.</li>
+      <li>When an LLM produces a generic, template-driven sonnet that merely fills in the blanks of a form, we can describe its structure as <em>mechanical</em>.</li>
+      <li>When a text (human or AI-generated) develops in a surprising yet inevitable-seeming way, with its structure and language feeling uniquely suited to its subject, we can argue that it achieves <em>organic form</em>.</li>
     </ul>
     <p>The interpreter's task is to provide evidence for this judgment, tracing how the parts cohere (or fail to cohere) into a living whole.</p>
 
