--- a/post36.html
+++ b/post36.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post 36 - My AI Notebook</title>
+    <title>Post 36 - Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <script src="template.js"></script>
 </head>
 <body>
     <header data-template="header">
-    <h1><a href="index.html">My AI Notebook</a></h1>
+    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
 </header>
     <main>
         <article>
