--- a/post62.html
+++ b/post62.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post 62 - My AI Notebook</title>
+    <title>Post 62 - Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <script src="template.js"></script>
 </head>
 <body>
     <header data-template="header">
-    <h1><a href="index.html">My AI Notebook</a></h1>
+    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
 </header>
     <main>
         <article>
             <h2>62 A Practical Method for Reading AI: Archaeology and Teleology</h2>
             <p>The <a href="post61.html">last post</a> introduced Paul Ricoeur's core idea: modern interpretation is a "conflict" between a hermeneutics of suspicion and a hermeneutics of recollection. This isn't just an abstract theory; it provides the foundation for a practical, step-by-step method for engaging with AI-generated texts and chat. This method moves us beyond simple reactions ("Is it authentic? Is it bullshit?") and into the rigorous work of interpretation.</p>
-            <p>The method is a conscious, dialectical movement between two poles. Ricoeur calls this a movement between an **archeology** (a regressive analysis of a text's origins) and a **teleology** (a progressive analysis of the meaning it makes possible).</p>
+            <p>The method is a conscious, dialectical movement between two poles. Ricoeur calls this a movement between an <em>archeology</em> (a regressive analysis of a text's origins) and a <em>teleology</em> (a progressive analysis of the meaning it makes possible).</p>
 
             <h3>Step 1: The Archeological Analysis (The School of Suspicion)</h3>
-            <p>You must begin with a reductive, demystifying reading. This is the analysis of the AI text as a **mechanism**. The core question is: "Where does this text come from?" This is an act of suspicion. You are treating the text's fluent surface as a mask that conceals the non-human, statistical processes that generated it.</p>
+            <p>You must begin with a reductive, demystifying reading. This is the analysis of the AI text as a <em>mechanism</em>. The core question is: "Where does this text come from?" This is an act of suspicion. You are treating the text's fluent surface as a mask that conceals the non-human, statistical processes that generated it.</p>
             
             <h4>Key Questions for the Archeological Reading:</h4>
             <ul>
@@ -31,7 +31,7 @@
             <p>This first step is crucial. It grounds your interpretation in the material reality of the technology and prevents you from naively anthropomorphizing the AI. It is an act of critical distance.</p>
 
             <h3>Step 2: The Teleological Analysis (The School of Recollection)</h3>
-            <p>Having established your critical distance, you must now pivot. You temporarily suspend your suspicion and treat the text not as a symptom of a machine, but as a **symbol** that addresses you, the interpreter. The core question is: "Where is this text going? What new meaning does it make possible *for me*?"</p>
+            <p>Having established your critical distance, you must now pivot. You temporarily suspend your suspicion and treat the text not as a symptom of a machine, but as a <em>symbol</em> that addresses you, the interpreter. The core question is: "Where is this text going? What new meaning does it make possible *for me*?"</p>
 
             <h4>Key Questions for the Teleological Reading:</h4>
             <ul>
@@ -44,10 +44,10 @@
             <h3>Step 3: The Dialectical Movement in Practice</h3>
             <p>The real art of this hermeneutic method is not to choose one reading over the other, but to move fluidly between them. The tension is the point. For example:</p>
             <ol>
-                <li>Start with **archeology**: "This AI-generated poem is just a cliché-ridden product of its training data, a blurry jpeg of a thousand other poems."</li>
-                <li>Discover a **teleological** possibility: "But the strange way it combined a technological metaphor with a natural one is something I've never seen before. That gives me a new idea."</li>
-                <li>Circle back to **archeology**: "This new idea wasn't 'created' by the AI, but was an accidental byproduct of its non-human, statistical method of combining words—a method a human writer, constrained by convention, might never have tried."</li>
-                <li>Arrive at a **dialectical synthesis**: "The AI text, a product of a non-conscious, 'archaic' linguistic process, has become the occasion for a forward-looking, 'teleological' expansion of my own creative consciousness."</li>
+                <li>Start with <em>archeology</em>: "This AI-generated poem is just a cliché-ridden product of its training data, a blurry jpeg of a thousand other poems."</li>
+                <li>Discover a <em>teleological</em> possibility: "But the strange way it combined a technological metaphor with a natural one is something I've never seen before. That gives me a new idea."</li>
+                <li>Circle back to <em>archeology</em>: "This new idea wasn't 'created' by the AI, but was an accidental byproduct of its non-human, statistical method of combining words—a method a human writer, constrained by convention, might never have tried."</li>
+                <li>Arrive at a <em>dialectical synthesis</em>: "The AI text, a product of a non-conscious, 'archaic' linguistic process, has become the occasion for a forward-looking, 'teleological' expansion of my own creative consciousness."</li>
             </ol>
             <p>By using this Ricoeurian framework, you move beyond the simplistic and unanswerable question, "Does the AI *mean* it?" and begin to engage with the far more productive and philosophically rich question, "What can be meant *through* it?" You treat the AI not as a fraudulent author, but as a powerful, eloquent, and deeply ambiguous cultural symbol that, above all, gives rise to thought.</p>
 
