--- a/postx.html
+++ b/postx.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post x - My AI Notebook</title>
+    <title>Post x - Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <script src="template.js"></script>
 </head>
 <body>
     <header data-template="header">
-        <h1>My AI Notebook</h1>
+        <h1>Professor Plate's Notebook</h1>
     </header>
     <main>
         <article>
