changed posts 53 through 59

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <h1><a href="index.html">Professor Plate's Notebook</a></h1>
 </header>
     <main>
-        <section class="quickkit-card">
-        <p><a href="romantic-quick-kit.html">Romantic Quick Kit</a> — things that might be helpful (terms, method, contexts, links).</p>
-        </section>
+        <div class="kit-cards-container">
+            <section class="quickkit-card">
+                <p><a href="romantic-quick-kit.html">Romantic Quick Kit</a> — things that might be helpful (terms, method, contexts, links).</p>
+            </section>
 
-        <section class="quickkit-card">
-        <p><a href="ai-hermeneutics-kit.html">AI Hermeneutics Kit</a> — theorizing a hermeneutics for AI.</p>
-        </section>
+            <section class="quickkit-card">
+                <p><a href="ai-hermeneutics-kit.html">AI Hermeneutics Kit</a> — theorizing a hermeneutics for AI.</p>
+            </section>
+        </div>
 
 
         <nav>
