--- a/post60.html
+++ b/post60.html
@@ -14,6 +14,10 @@
 </header>
     <main>
         <article>
+            <div class="kit-links-small">
+                <a href="romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
+                <a href="ai-hermeneutics-kit.html" class="kit-link-small">AI Hermeneutics Kit</a>
+            </div>
             <h2>60 Sleep Well! The Unconscious Arrogance of Medieval Sermon Technology</h2>
             <p>Imagine walking into a medieval bookstore and finding a sermon collection titled <em>Dormi secure</em>—literally, "Sleep Well!" This wasn't false advertising or wishful thinking. It was a frank acknowledgment of purpose: here was a book of ready-made sermons designed specifically so that "an overworked or under-trained priest" could "sleep without worry" on Saturday night. Sunday's sermon was handled. No struggle required.</p>
 
