--- a/post53.html
+++ b/post53.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="An introduction to the Defense of Romanticism series, arguing that Romantic hermeneutics provides a rigorous method for analyzing AI."/>
+  <meta name="description" content="Introducing the 'Steelmanning the Romantics' series, a critical re-evaluation of the Romantic worldview as a toolkit for analyzing AI."/>
 </head>
 <body>
   <header data-template="header">
@@ -15,23 +15,29 @@
   </header>
   <main>
     <article>
-      <h2>53 Romanticism Was Never Naïve: A Defense in the Age of AI</h2>
-      <p>This post opens the <em>Defense of Romanticism</em> series. Its central claim is that the common critiques of AI art and literature are marked by the trace of a misunderstood Romanticism. Critics often attack a caricature—a "Romanticism" of sentimental feelings and diary-like sincerity.</p>
-      <p>This series argues for something different. True Romanticism was never naïve. It was a rigorous intellectual movement that built a powerful <strong>method</strong> for understanding texts, consciousness, and the very nature of meaning. That method, known as Romantic hermeneutics, is surprisingly robust—and it gives us the sharpest tools we have for analyzing the challenges of AI.</p>
-
+      <div class="top-links">
+        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+      </div>
+      <h2>53 Steelmanning the Romantics: A More Rigorous Toolkit for a Troubled Idea</h2>
+      <p>For dozens of posts, I've been diagnosing what I call the "Romantic trace" in our contemporary debates about AI. I've argued that our anxieties about authenticity, the "human spark," and soulless machines are echoes of a worldview we inherited from the 1800s—a worldview I've suggested is inadequate for our current technological moment.</p>
+      <p>But a critique is only as good as its understanding of the thing it criticizes. Have I been fair? Or have I been attacking a caricature—a "Romanticism" of sentimental feelings and diary-like sincerity? By using the term as a shorthand for a set of gut feelings, I risk making the same mistake I'm accusing others of: relying on an inherited, unexamined concept.</p>
+      <p>This series of posts is an attempt to correct that. It is not a <em>defense</em> of Romanticism, nor is it an abandonment of my core critique. It's an exercise in intellectual honesty. Before we can definitively say that the Romantic worldview fails us, we must engage with its most powerful and rigorous form. We have to steelman the argument.</p>
+      <p>My new claim is this: Romanticism wasn't just a collection of feelings; it was a sophisticated intellectual movement that built a powerful <strong>method</strong> for understanding texts, consciousness, and meaning. To strengthen my own argument, I need to understand that method from the inside.</p>
+      
       <h3>What This Series Will Do</h3>
-      <p>This is not a nostalgic defense of the "human spark." It is a methodological argument that will do three things:</p>
+      <p>This is not a conversion narrative. It is a strategic deep dive. The goal is to build a better toolkit for analysis by first understanding the tools of the very worldview I've been questioning. This series will do three things:</p>
       <ul>
-        <li><strong>Re-center the Method:</strong> We will show that Romantic interpretation is a disciplined, evidence-based practice of reading, not a subjective search for feelings. The "author," whether human or machine, is a <em>reconstructable practice</em> we can trace in the text.</li>
-        <li><strong>Provide a Toolkit:</strong> We will not just theorize. The <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> is the intellectual home base for this series. It contains the key concepts, a step-by-step method, and links to primary sources. Use it as your guide.</li>
-        <li><strong>Apply the Method to AI:</strong> Each post in this series will use the toolkit to analyze the core problems of AI—from "bullshit" to "individuality"—demonstrating that the 200-year-old method is more relevant than ever.</li>
+        <li><strong>Isolate the Method:</strong> We will move past the caricature of "sincere feelings" and reconstruct the disciplined, evidence-based interpretive practices the Romantics actually developed. The "author," for them, was not a ghost to be channeled but a <em>reconstructable practice</em> to be traced in the text. We need to understand the logic of this method, even if we ultimately reject its premises.</li>
+        <li><strong>Provide a Diagnostic Toolkit:</strong> I'm creating a <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to serve as the intellectual home base for this series. Think of it not as a user manual to be adopted, but as a field guide to a foreign country. It contains the key concepts and a step-by-step breakdown of the method. Use it to understand the internal logic of the system we are analyzing.</li>
+        <li><strong>Stress-Test the Method Against AI:</strong> Each post in this series will use this toolkit to analyze the core problems of AI. The goal isn't to prove that the Romantic method works. The goal is to ask a more interesting question: What happens when you apply this powerful, 200-year-old interpretive engine to a 21st-century technology it could never have anticipated? What can it illuminate, and where do its foundational assumptions finally break down?</li>
       </ul>
       
       <h3>How to Read This Series</h3>
-      <p>Start with the toolkit. The posts that follow are applications of its method. This series is an argument that the best way to understand our future with AI is to master the intellectual tools of the past.</p>
+      <p>Start with the toolkit, not as a manual to be followed, but as a map of the territory we are about to explore. The posts that follow are experiments. They apply the Romantic method not to celebrate it, but to understand its mechanics, its power, and its limits.</p>
+      <p>This series is an argument that to move <em>past</em> the Romantic worldview that still quietly shapes so much of our thinking, we first have to understand it, in its own terms, better than it understood itself.</p>
 
       <hr>
-      <p class="series-note">This post inaugurates <em>Defense of Romanticism</em>. The <a href="romantic-quick-kit.html">Quick Kit</a> is the essential starting point for the posts that follow.</p>
+      <p class="series-note">This post inaugurates the <em>"Steelmanning the Romantics"</em> series. The <a href="romantic-quick-kit.html">Quick Kit</a> is the essential starting point for the posts that follow.</p>
       <p><a href="index.html">Home</a> | <a href="post52.html">Previous Post</a> | <a href="post54.html">Next Post</a></p>
     </article>
   </main>
