--- a/post54.html
+++ b/post54.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="A rigorous defense of the Romantic 'author' as a reconstructable practice, demonstrated through a hermeneutic analysis of an AI-generated poem."/>
+  <meta name="description" content="Testing the Romantic method of reconstructing an 'author' by applying it to an AI-generated poem, and questioning what the results reveal about our own interpretive habits."/>
 </head>
 <body>
 <header data-template="header">
@@ -15,41 +15,33 @@
 </header>
 <main>
 <article>
-  <h2>54 Reclaiming the Romantic “Author”</h2>
-  <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
-  <p>The most common caricature of Romanticism is that it requires a mystical séance with a dead writer’s soul. This post argues for a more rigorous view: the Romantic "author" is not an oracle to be channeled but a <strong>reconstructable practice</strong> to be analyzed. <a href="romantic-kit-hermeneutics.html">Romantic hermeneutics</a> gives us a powerful method to evidence this practice, whether the text comes from a human or a machine.</p>
+  <div class="top-links">
+    <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+  </div>
+  <h2>54 The Author-Function in the Machine: A Romantic Test</h2>
+  <p>The most common critique of AI writing is that there is "no one there." This assumes the Romantic ideal of an "author" as a soul pouring its meaning into the text. But the rigorous Romantics started from a more skeptical place: Schleiermacher famously argued that <strong>misunderstanding is the norm</strong>, and therefore interpretation must be a disciplined art. A core part of that art was reconstructing the author's singular practice.</p>
+  <p>This wasn't just empathy; it was a formal method. It involved both a <strong>comparative</strong> analysis (tracing patterns against the rules of language) and a <strong>"divinatory"</strong> one—making a disciplined, intuitive leap to hypothesize the creative act that could produce such a text. So, let's run this more complex test. Can we apply it to an AI?</p>
 
   <h3>A Practical Demonstration</h3>
-  <p>Let's move from theory to practice. I prompted an AI with a simple request: "Write a four-line poem about a city at night." Here is the output:</p>
+  <p>I prompted an AI: "Write a four-line poem about a city at night."</p>
   <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem;">
     <p>The velvet dark doth cloak the stone,<br>Where steel and glass in slumber lie,<br>A million lights, like seeds are sown,<br>Beneath a silent, watching sky.</p>
   </blockquote>
-  <p>How do we analyze this without talking about "feelings"? We use Schleiermacher's two rails.</p>
+  <p>Applying the method:</p>
+  
+  <h4>1. The Grammatical/Comparative Rail</h4>
+  <p>The poem uses shared conventions: quatrain, iambic-ish meter, ABCB rhyme, familiar tropes. This is the baseline evidence.</p>
 
-  <h4>1. The Grammatical Rail (The System)</h4>
-  <p>First, we analyze the text as a product of a system. What are its shared, conventional properties?</p>
-  <ul>
-    <li><strong>Form:</strong> A quatrain (four-line stanza).</li>
-    <li><strong>Meter:</strong> Roughly iambic tetrameter (four beats per line).</li>
-    <li><strong>Rhyme:</strong> An ABCB rhyme scheme (stone/lie/sown/sky).</li>
-    <li><strong>Genre:</strong> A conventional lyric poem using familiar tropes (darkness as velvet, city lights as stars/seeds, a personified sky).</li>
-  </ul>
-  <p>This is the baseline. It tells us what the system knows about "poetry." If we stop here, the poem is generic, a product of what I’ve called <a href="post9.html">"mechanical repetition."</a></p>
+  <h4>2. The Psychological/Divinatory Rail</h4>
+  <p>Now we make our leap. We see the archaic "doth" and the tension between the organic ("seeds") and artificial ("steel"). Our divinatory guess is that the organizing "mind" here has a signature: it favors a slightly elevated, historical tone and is preoccupied with the nature/tech divide. We could then test this hypothesis against its other outputs.</p>
 
-  <h4>2. The Psychological Rail (The Singular Practice)</h4>
-  <p>Next, we search for the specific, unique choices that distinguish this text. We posit a singular "mind" or process and trace its habits. Let's imagine we've prompted this model before.</p>
-  <ul>
-    <li><strong>Word Choice:</strong> The word "doth" is a striking choice. It's an archaic verb that shifts the poem's register. Why not "covers" or "wraps"? This isn't a random error; it's a specific stylistic decision. If we noticed this model often uses archaic language, we could identify this as part of its unique signature.</li>
-    <li><strong>Metaphorical Pattern:</strong> The central metaphor combines the organic ("seeds are sown") with the artificial ("steel and glass"). This tension between the natural and the man-made could be a recurring theme in this model's outputs, part of its unique "psychological" landscape.</li>
-  </ul>
-  <p>By tracing these specific patterns, we are no longer talking about a generic system but are reconstructing a singular practice. We are building an evidence-based case for a distinct authorial "voice," even if that author is a machine.</p>
-
-  <h3>The Goal: "Better Than It Understood Itself"</h3>
-  <p>The point of this two-rail analysis is to achieve what Schleiermacher aimed for: to understand the work "better than [the author] understood himself." We make explicit the linguistic and conceptual patterns the creator—human or AI—used intuitively or probabilistically. Schlegel's insight that a work "aims at more than it knows" applies perfectly here; the AI doesn't "know" it's creating a tension between the organic and the artificial, but a rigorous interpretation can reveal that structure.</p>
-  <p>This is the answer to the "teenage diary" version of authenticity. The Romantic method doesn't reward raw feeling; it rewards <strong>evidenced individuality</strong>. It gives us a way to talk about the unique signature of a work with analytical precision, freeing us from the dead-end debate about the ghost in the machine.</p>
-
+  <h3>The Critical Pivot: A Discovery or a Projection?</h3>
+  <p>The method <em>works</em>. We successfully generated a plausible author-function for the machine, complete with a stylistic signature. But what have we actually discovered?</p>
+  <p>This is where the steelman exercise reveals its true purpose. The Romantic method, with its powerful two-stroke engine of analysis and divination, is so effective at constructing a coherent author that it can build one even from a statistical ghost. It proves not that the AI has a soul, but that our interpretive methods are hardwired to find one. We have successfully projected the ghost into the machine.</p>
+  <p>The question, then, is not whether an AI can have a "voice." The more unsettling question is whether the "voice" we've always found in human texts is also, in part, a similar reconstruction—a coherent pattern our minds assemble after the fact. Applying this more rigorous Romantic method to AI doesn't elevate the machine; it forces us to question the nature of the very "presence" we thought was so simple to begin with.</p>
+  
   <hr>
-  <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
+  <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
   <p><a href="index.html">Home</a> | <a href="post53.html">Previous Post</a> | <a href="post55.html">Next Post</a></p>
 </article>
 </main>
