--- a/post55.html
+++ b/post55.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="A Romantic hermeneutic answer to the critique of AI as 'bullshit,' arguing that texts can hold unconscious, surplus meaning beyond authorial intent."/>
+  <meta name="description" content="Moving beyond the 'bullshit' critique of AI by using Romantic hermeneutics to analyze the textual unconscious of an unconscious text."/>
 </head>
 <body>
   <header data-template="header">
@@ -15,28 +15,27 @@
   </header>
   <main>
     <article>
-      <h2>55 More Than Bullshit: A Romantic Reading of the Textual Unconscious</h2>
-      <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
-      <p>A common and powerful critique labels LLMs as "bullshit machines." Drawing on philosopher Harry Frankfurt, this argument states that AI is not lying (which requires knowing the truth) but is profoundly indifferent to truth. Its output is fluent mimicry without belief. From a Romantic perspective, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>.</p>
-      <p>But Romantic hermeneutics offers a more productive path. It allows us to move past the author's (or model's) state of mind and instead focus on the <em>surplus meaning</em> within the text itself. The question isn't whether the AI believes what it says, but what unconscious patterns and cultural logics are revealed in its speech.</p>
+      <div class="top-links">
+        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+      </div>
+      <h2>55 More Than Bullshit? Reading the Textual Unconscious of an Unconscious Text</h2>
+      <p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>. The machine speaks words it does not inhabit.</p>
+      <p>But the Romantic toolkit was more sophisticated than this. Friedrich Schlegel argued that a great work "aims at more than it knows," carrying <strong>unconscious meanings</strong>. He even suggested that a text's <strong>"confusions" and contradictions</strong> were themselves meaningful, revealing the author's internal struggles. This is a method that embraces flaws. What happens if we apply this generous lens to AI?</p>
 
-      <h3>Schlegel's Reframe: The Work That "Aims at More Than It Knows"</h3>
-      <p>The Romantic theorist Friedrich Schlegel provided the key: "Every excellent work... aims at more than it knows." This isn't a mystical claim. It's a recognition that a text is a crystallization of cultural forces, linguistic structures, and psychological patterns that no author—human or machine—can fully control or comprehend. A text always says more than it means to say.</p>
-      <p>Applied to AI, this is a breakthrough. An LLM, trained on a vast corpus of human language, becomes a unique conduit for the "textual unconscious" of our culture. Its output is a dream-work of the dataset, unintentionally revealing the latent metaphors, hidden biases, and deep-seated myths embedded in its training data.</p>
-      
       <h3>From Bullshit to Artifact: An Example</h3>
-      <p>To read for this surplus is a specific application of our <a href="romantic-kit-hermeneutics.html">hermeneutic method</a>. Consider an AI prompted to write a corporate statement about "innovation." It might produce a text that combines the language of digital disruption with metaphors of farming and natural growth ("planting the seeds of synergy," "harvesting disruptive ideas").</p>
+      <p>Let's use our previous example: an AI prompted for a corporate statement on "innovation" produces text blending Silicon Valley jargon with agrarian metaphors ("planting the seeds of synergy," "harvesting disruptive ideas").</p>
       <ul>
-          <li>The "bullshit" reading dismisses this as meaningless cliché.</li>
-          <li>The <em>Romantic hermeneutic reading</em> sees a rich cultural artifact. The unintentional fusion of technological and agrarian language reveals a deep-seated American myth: the Jeffersonian ideal of the yeoman farmer being unconsciously mapped onto the Silicon Valley entrepreneur. The AI doesn't "believe" this, but its text reveals a powerful cultural logic.</li>
+        <li>The "bullshit" reading dismisses this as a meaningless, contradictory cliché.</li>
+        <li>A <strong>Schlegelian hermeneutic reading</strong>, however, sees a rich artifact. The unintentional fusion—the "productive confusion"—isn't the AI's "idea." It's an unmediated expression of a deep-seated American myth (the Jeffersonian farmer reborn as the tech entrepreneur) that is latent in the training data. The AI, having no conscious intent to smooth over the contradiction, reveals it raw.</li>
       </ul>
-      <p>This is not bullshit. It is data. The task of the interpreter is to make that latent cultural structure visible.</p>
-
-      <h3>Why It Matters</h3>
-      <p>The "bullshit" label is an interpretive dead end. It invites us to dismiss the text. Romantic hermeneutics invites us to lean in closer. It reframes the AI's lack of consciousness from a moral failure into an unprecedented opportunity: to read the outputs as direct, unmediated expressions of the collective linguistic patterns and myths that shape our world.</p>
+      
+      <h3>The Critical Pivot: Whose Unconscious Is It Anyway?</h3>
+      <p>Here again, the rigorous method works, but reveals something deeply unsettling. We have successfully extracted a "surplus of meaning" from the text's "confusion." But is this meaning <em>in</em> the text, or is it entirely in us, the interpreters?</p>
+      <p>The AI knows nothing of Jefferson or Silicon Valley. It is just generating a probable sequence. <em>We</em> are the ones who recognize the pattern and dignify its contradiction as "productive." Schlegel’s method was designed to uncover the hidden depths of a human author's mind and time. Applied to AI, it reveals that the "textual unconscious" is our own. We are finding meaning not because the text is deep, but because our capacity for interpretation is.</p>
+      <p>This reframes the "bullshit" critique. Perhaps the true bullshit isn't the AI's indifference to truth, but the interpretive hubris of treating its statistical noise as a profound, symbolic dream. We ask the machine to dream for us, and then congratulate ourselves on our brilliant interpretation of the result.</p>
 
       <hr>
-      <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
+      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post54.html">Previous Post</a> | <a href="post56.html">Next Post</a></p>
     </article>
   </main>
