--- a/post62.html
+++ b/post62.html
@@ -14,6 +14,10 @@
 </header>
     <main>
         <article>
+            <div class="kit-links-small">
+                <a href="romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
+                <a href="ai-hermeneutics-kit.html" class="kit-link-small">AI Hermeneutics Kit</a>
+            </div>
             <h2>62 A Practical Method for Reading AI: Archaeology and Teleology</h2>
             <p>The <a href="post61.html">last post</a> introduced Paul Ricoeur's core idea: modern interpretation is a "conflict" between a hermeneutics of suspicion and a hermeneutics of recollection. This isn't just an abstract theory; it provides the foundation for a practical, step-by-step method for engaging with AI-generated texts and chat. This method moves us beyond simple reactions ("Is it authentic? Is it bullshit?") and into the rigorous work of interpretation.</p>
             <p>The method is a conscious, dialectical movement between two poles. Ricoeur calls this a movement between an <em>archeology</em> (a regressive analysis of a text's origins) and a <em>teleology</em> (a progressive analysis of the meaning it makes possible).</p>
