changed wanna be

--- a/post47.html
+++ b/post47.html
@@ -22,7 +22,7 @@
 
             <p>The cowboy's own place is a cramped, messy trailer. In one scene, there's a woman (obviously not the daughter's mom) sleeping in his bed. This shot breaks up the simple narrative of heroic sacrifice. He's not a cowboy and a father. He's a man living a transient life on the rodeo circuit, a life with another partner. His world is split. There's the world of his past family, where he returns as a visitor, and the world of his present life (the rodeo, the road, and a new relationship).</p>
 
-            <p>This fracture makes me re-read things. Maybe the "let me go" line isn't metaphorical. It's not about being free from the pressures of being a public hero. It's a literal thing. He's talking to his daughter. Maybe his whole former family.  "I don't wanna be your hero" is him justifying his choices.</p>
+            <p>This fracture makes me re-read things. Maybe the "let me go" line isn't metaphorical. It's not about being free from the pressures of being a public hero. It's a literal thing. He's talking to his daughter. Maybe his whole former family.  "I don't want to be your hero" is him justifying his choices.</p>
 
             <p>The heroic narrative of "providing for his child" doesn't hold together. There are two things going on. There is some sacrifice. And there is sharing ice cream with his daughter. There's also the other story. Him going back to his trailer and the life there without his daughter.</p>
 
